--- a/Data_Science_Advanced/Problem_Solving/Problem Solving 1.ipynb
+++ b/Data_Science_Advanced/Problem_Solving/Problem Solving 1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0951c29a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,54 @@
     "        \"\"\"\n",
     "        :type strs: List[str]\n",
     "        :rtype: str\n",
-    "        \"\"\""
+    "        \"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2fe5985c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonPrefix(self, strs):\n",
+    "        if not strs:\n",
+    "            return \"\"\n",
+    "\n",
+    "        # Find the string with the minimum length\n",
+    "        min_len = min(len(s) for s in strs)\n",
+    "\n",
+    "        # Initialize the common prefix string\n",
+    "        common_prefix = \"\"\n",
+    "\n",
+    "        # Iterate over the characters at each position\n",
+    "        for i in range(min_len):\n",
+    "            char = strs[0][i]  # Get the character from the first string\n",
+    "\n",
+    "            # Check if the character is common to all strings\n",
+    "            for s in strs[1:]:\n",
+    "                if s[i] != char:\n",
+    "                    return common_prefix\n",
+    "\n",
+    "            # If the character is common, add it to the common prefix\n",
+    "            common_prefix += char\n",
+    "\n",
+    "        return common_prefix\n",
+    "\n",
+    "\n",
+    "strs = [\"flower\", \"flow\", \"flight\"]\n",
+    "solution = Solution()\n",
+    "result = solution.longestCommonPrefix(strs)\n",
+    "print(result)  # Output: \"fl\"\n"
    ]
   },
   {
@@ -86,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "9445bcb3",
    "metadata": {},
    "outputs": [],
@@ -96,6 +143,46 @@
     "        :type x: int\n",
     "        :rtype: bool\n",
     "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7a917317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def isPalindrome(self, x):\n",
+    "        if x < 0:\n",
+    "            return False\n",
+    "\n",
+    "        # Convert the integer to a string\n",
+    "        x_str = str(x)\n",
+    "\n",
+    "        # Compare characters from the start and end of the string\n",
+    "        left = 0\n",
+    "        right = len(x_str) - 1\n",
+    "\n",
+    "        while left < right:\n",
+    "            if x_str[left] != x_str[right]:\n",
+    "                return False\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "\n",
+    "        return True\n",
+    "x = 121\n",
+    "solution = Solution()\n",
+    "result = solution.isPalindrome(x)\n",
+    "print(result)  # Output: True\n"
    ]
   },
   {
@@ -123,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
