--- a/Data_Science_Advanced/LinearReg/Linear Regression Assignment .ipynb
+++ b/Data_Science_Advanced/LinearReg/Linear Regression Assignment .ipynb
@@ -102,8 +102,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "45d00cc4",
    "metadata": {},
    "outputs": [
@@ -113,17 +118,11 @@
      "text": [
       "The predicted CO2 emission for a car with weight 2555 and volume 1300 is 120.11\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/home/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:409: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
+    "import warnings\n",
+    "\n",
     "# Load the data from the CSV file\n",
     "data = pd.read_csv('cars.csv')\n",
     "\n",
@@ -142,8 +141,8 @@
     "y = data['CO2']\n",
     "model = LinearRegression()\n",
     "\n",
-    "# Set the feature names explicitly\n",
-    "feature_names = X.columns\n",
+    "# Suppress the warning about feature names\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "\n",
     "model.fit(X, y)\n",
     "\n",
